Bugfixes 4 and 7: inline display of header, menu collapse styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,6 +117,11 @@ header {
     margin: 5px;
 }
 
+.dropdown-item:active {
+    /* overrides default Bootstrap parameters */
+    background-color: #ffffff;
+}
+
 #mobSelector {
     color: #ffffff;
 }
